--- a/v2/server/src/app/components/profile/profile.component.css
+++ b/v2/server/src/app/components/profile/profile.component.css
@@ -1,27 +1,39 @@
-.profile-container {
-    max-width: 600px;
-    margin: 0 auto;
-    padding: 20px;
-    border: 1px solid #ccc;
-    border-radius: 8px;
-  }
-  
-  .profile-container h2 {
-    font-size: 24px;
-    margin-bottom: 10px;
-  }
-  
-  .profile-container ul {
-    list-style-type: none;
-    padding: 0;
-  }
-  
-  .profile-container li {
-    margin-bottom: 10px;
-  }
-  
-  .profile-container li strong {
-    font-weight: bold;
-    margin-right: 5px;
-  }
-  
+/* Estilos generales para el perfil */
+.profile-header {
+  background-color: #f0f0f0;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  margin-bottom: 20px;
+}
+
+.profile-text {
+  font-family: 'Arial', sans-serif;
+}
+
+.profile-label {
+  font-weight: bold;
+  margin-bottom: 5px;
+  color: #4d4848;
+}
+
+.profile-dato {
+  margin-bottom: 10px;
+}
+
+.profile-specific {
+  margin-top: 10px;
+}
+
+/* Estilos específicos para diferentes tipos de datos */
+.profile-label.email {
+  color: #007bff; /* Color azul para el email */
+}
+
+.profile-label.antecedentes {
+  font-style: italic; /* Estilo cursiva para antecedentes */
+}
+
+.profile-dato.antecedentes {
+  padding-left: 20px; /* Añadir un poco de espacio para antecedentes */
+}
