--- a/v2/server/src/app/components/profile/profile.component.html
+++ b/v2/server/src/app/components/profile/profile.component.html
@@ -10,7 +10,7 @@
         <p class="profile-dato">{{ user.persona.usuario.email }}</p>
         
         <p class="profile-label">Ubigeo: </p>
-        <p class="profile-dato">{{ user.persona.ubigeo }}</p>
+        <p class="profile-dato">{{ user.persona.ubicacion.distrito }}</p>
         
         <p class="profile-label">Fecha de Nacimiento: </p>
         <p class="profile-dato">{{ user.persona.fecha_nacimiento | date }}</p>
