--- a/v2/server/src/app/pages/paciente/visualizar-test-realizado/visualizar-test-realizado.component.css
+++ b/v2/server/src/app/pages/paciente/visualizar-test-realizado/visualizar-test-realizado.component.css
@@ -1,3 +1,36 @@
 table {
-    width: 100%;
-  }
+  width: 100%;
+}
+
+/* visualizar-test-realizado.component.css */
+.titulo {
+  font-family: 'Roboto', sans-serif; /* Fuente limpia y moderna */
+  font-size: 24px; /* Tamaño del texto */
+  font-weight: bold; /* Negrita */
+  color: #3f51b5; /* Azul típico de Angular Material */
+  text-align: center; /* Centrado horizontalmente */
+  margin-top: 20px; /* Espacio superior */
+  margin-bottom: 20px; /* Espacio inferior */
+}
+
+/* Estilo para el botón Ver */
+/* Estilo para el botón Ver */
+.boton-ver {
+  color: #ffffff; /* Texto en color blanco */
+  background-color: #4CAF50; /* Fondo verde */
+  border: none; /* Sin borde */
+  padding: 6px 20px; /* Espaciado interno */
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 14px;
+  border-radius: 5px; /* Bordes redondeados */
+  cursor: pointer;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1); /* Sombra ligera */
+}
+
+/* Estilo para el botón Ver cuando se pasa el mouse por encima */
+.boton-ver:hover {
+  opacity: 0.8; /* Reducción de opacidad al pasar el mouse */
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2); /* Sombra más pronunciada al pasar el mouse */
+}
