--- a/v2/server/src/app/pages/auth/logout/logout.component.html
+++ b/v2/server/src/app/pages/auth/logout/logout.component.html
@@ -1,5 +1,5 @@
 <section>
   <h1>Cerrar sesión</h1>
   <p>¿Estás seguro de que deseas cerrar sesión?</p>
-  <button>Confirmar</button>
+  <button (click)="cerrarSesion()">Confirmar</button>
 </section>
