--- a/v2/server/src/app/components/sidebar/sidebar.component.html
+++ b/v2/server/src/app/components/sidebar/sidebar.component.html
@@ -1,6 +1,7 @@
 <mat-toolbar color="primary" class="mat-elevation-z3">
   <button mat-icon-button (click)="collapsed.set(!collapsed())">
     <mat-icon>menu</mat-icon>
+    <app-logo style="width: 300px"></app-logo>
   </button>
 </mat-toolbar>
 <mat-sidenav-container>
