--- a/v2/server/src/app/pages/paciente/visualizar-test-realizado/visualizar-test-realizado.component.html
+++ b/v2/server/src/app/pages/paciente/visualizar-test-realizado/visualizar-test-realizado.component.html
@@ -10,8 +10,8 @@
             <td mat-cell *matCellDef="let element; let i = index"> {{ i + 1 }} </td>
           </ng-container>
 
-           <!-- Fecha Column -->
-           <ng-container matColumnDef="test">
+          <!-- Test Column -->
+          <ng-container matColumnDef="test">
             <th mat-header-cell *matHeaderCellDef> Test </th>
             <td mat-cell *matCellDef="let element"> {{ element.test }} </td>
           </ng-container>
@@ -28,11 +28,25 @@
             <td mat-cell *matCellDef="let element"> {{ element.fecha_realizada | date:'HH:mm:ss' }} </td>
           </ng-container>
 
-          <!-- Ver Column (Botón Ver) -->
-          <ng-container matColumnDef="diagnostico">
-            <th mat-header-cell *matHeaderCellDef> Diagnostico </th>
+          <!-- Estado Column -->
+          <ng-container matColumnDef="estado">
+            <th mat-header-cell *matHeaderCellDef> Estado </th>
+            <td mat-cell *matCellDef="let element"> {{ element.estado }} </td>
+          </ng-container>
+
+          <!-- Evaluación Column -->
+          <ng-container matColumnDef="evaluacion">
+            <th mat-header-cell *matHeaderCellDef> Evaluación </th>
             <td mat-cell *matCellDef="let element">
-              <button mat-button (click)="abrirDetalleDiagnostico(element)" class="boton-ver">Ver</button>
+              <button mat-button (click)="abrirDetalleEvaluacion(element.codigo_historial_test)" class="boton-ver">Ver evaluacion</button>
+            </td>
+          </ng-container>
+
+          <!-- Diagnóstico Column -->
+          <ng-container matColumnDef="diagnostico">
+            <th mat-header-cell *matHeaderCellDef> Diagnóstico </th>
+            <td mat-cell *matCellDef="let element">
+              <button mat-button (click)="abrirDetalleDiagnostico(element)" class="boton-ver">Ver diagnostico</button>
             </td>
           </ng-container>
 
@@ -47,7 +61,6 @@
                        [pageSize]="10">
         </mat-paginator>
       </div>
-      
     </mat-card-content>
-  </mat-card>  
+  </mat-card>
 </div>
