--- a/v2/server/src/app/pages/especialista/visualizar-tests-realizados/visualizar-tests-realizados.component.html
+++ b/v2/server/src/app/pages/especialista/visualizar-tests-realizados/visualizar-tests-realizados.component.html
@@ -35,7 +35,7 @@
           </ng-container>
 
           <!-- Diagnóstico Column -->
-          <ng-container matColumnDef="detalle diagnostico">
+          <ng-container matColumnDef="detalle diagnosticos">
             <th mat-header-cell *matHeaderCellDef>Detalle diagnósticos </th>
             <td mat-cell *matCellDef="let element">
               <button mat-button (click)="abrirDetalleDiagnostico(element)" class="boton-ver">Ver diagnóstico</button>
