--- a/v2/server/src/app/components/evaluar-paciente/evaluar-paciente.component.html
+++ b/v2/server/src/app/components/evaluar-paciente/evaluar-paciente.component.html
@@ -33,26 +33,32 @@
     </div>
 
     <!-- Apartado 2: Datos del Test -->
-    <form class="example-form">
+    <form [formGroup]="evaluarForm" class="example-form">
       <h3>Evaluación Especialista:</h3>
       <mat-form-field class="example-full-width">
         <mat-label>Fundamento científico</mat-label>
         <textarea
           matInput
           placeholder="Ex. De la contrariedad de sus emo..."
+          formControlName="fundamento_cientifico"
         ></textarea>
       </mat-form-field>
 
       <h3>Del tratamiento:</h3>
       <mat-form-field class="example-full-width">
         <mat-label>Tratamiento</mat-label>
-        <input matInput placeholder="Ex. Realizar ejercicios de respiración" />
+        <input
+          matInput
+          placeholder="Ex. Realizar ejercicios de respiración"
+          formControlName="tratamiento"
+        />
       </mat-form-field>
       <mat-form-field class="example-full-width">
         <mat-label>Descripción del tratamiento</mat-label>
         <textarea
           matInput
           placeholder="Ex. Puedes colocar los pasos..."
+          formControlName="descripcion_tratamiento"
         ></textarea>
       </mat-form-field>
 
@@ -62,8 +68,11 @@
         <textarea
           matInput
           placeholder="Ex. Podrías colocar algunas recomendaciones a seguir..."
+          formControlName="comunicacion"
         ></textarea>
       </mat-form-field>
+
+      <button mat-button (click)="this.onEvaluarTest()">REGISTRAR</button>
     </form>
   </div>
 </div>
